--- a/COVID.html
+++ b/COVID.html
@@ -132,7 +132,7 @@
 							  <p>The final image takes choropleth form to highlight the number of deaths in the early stages of the pandemic, between March and April in 2020.   I chose eight color classifications for each map with specific reference to the local authorities without any deaths. 
                               <div style="max-width: 700px; margin: 0 auto;">
             <span class="image featured">
-              <img src="images/COVID/COVIDEW.jpeg" alt="" style="width: 100%;" />
+              <img src="images/COVID/CovidEW.jpeg" alt="" style="width: 100%;" />
             </span>
           </div>								
 												
